--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	<!-- Document Title
 	============================================= -->
 	<title>Yao Xin Meng</title>
+	<link rel="icon" href="https://yaoxinmeng.github.io/favicon.ico">
 </head>
 
 <body class="stretched side-push-panel">
