--- a/index.html
+++ b/index.html
@@ -119,53 +119,129 @@
 
 					<!-- Portfolio Items
 					============================================= -->
-					<div id="portfolio" class="portfolio grid-container portfolio-nomargin portfolio-full portfolio-masonry mixed-masonry clearfix">
+					<div class="row notopmargin divcenter" style="max-width: 1000px;">
 
-						<article class="portfolio-item pf-media pf-icons wide">
-							<div class="portfolio-image">
-								<a href="#">
-									<img src="images/Mechatronics/ME433_LCD.jpg" alt="Open Imagination">
-								</a>
-								<div class="portfolio-overlay">
-									<div class="portfolio-desc">
-										<h3><a href="mechatronics.html">Open Imagination</a></h3>
-										<span><a href="#">Media</a>, <a href="#">Icons</a></span>
+							<div class="col-md-6 bottommargin">
+								<div class="team">
+									<div class="team-image">
+										<img src="images/projects/mechatronics.jpg" alt="Mechatronics">
+										<div class="team-overlay">
+											<h3><a href="mechatronics.html" class="social-icon" title="Mechatronics">MECHATRONICS
+											</a></h3>
+										</div>
+									</div>
+									<div class="team-desc team-desc-bg">
+										<div class="team-title"><h4>Mechatronics</h4></div>
 									</div>
 								</div>
 							</div>
-						</article>
 
-						<article class="portfolio-item pf-media pf-icons wide">
-							<div class="portfolio-image">
-								<a href="#">
-									<img src="images/Mechatronics/ME433_LCD.jpg" alt="Open Imagination">
-								</a>
-								<div class="portfolio-overlay">
-									<div class="portfolio-desc">
-										<h3><a href="#">Open Imagination</a></h3>
-										<span><a href="#">Media</a>, <a href="#">Icons</a></span>
+							<div class="col-md-6 bottommargin">
+								<div class="team">
+									<div class="team-image">
+										<img src="images/projects/nickel.jpg" alt="Nickel Feeder">
+										<div class="team-overlay">
+											<h3><a href="#" class="social-icon" title="Nickel Feeder">NICKEL FEEDER
+											</a></h3>
+										</div>
+									</div>
+									<div class="team-desc team-desc-bg">
+										<div class="team-title"><h4>Nickel Feeder</h4></div>
 									</div>
 								</div>
 							</div>
-						</article>
 
-						<article class="portfolio-item pf-media pf-icons wide">
-							<div class="portfolio-image">
-								<a href="#">
-									<img src="images/Mechatronics/ME433_LCD.jpg" alt="Open Imagination">
-								</a>
-								<div class="portfolio-overlay">
-									<div class="portfolio-desc">
-										<h3><a href="#">Open Imagination</a></h3>
-										<span><a href="#">Media</a>, <a href="#">Icons</a></span>
+							<div class="col-md-6 bottommargin">
+								<div class="team">
+									<div class="team-image">
+										<img src="images/projects/dtd.jpg" alt="Design Thinking and Doing">
+										<div class="team-overlay">
+											<h3><a href="#" class="social-icon" title="Design Thinking and Doing">DESIGN THINKING AND DOING
+											</a></h3>
+										</div>
+									</div>
+									<div class="team-desc team-desc-bg">
+										<div class="team-title"><h4>Design Thinking and Doing</h4></div>
 									</div>
 								</div>
 							</div>
-						</article>
 
-					</div><!-- #portfolio end -->
+							<div class="col-md-6 bottommargin">
+								<div class="team">
+									<div class="team-image">
+										<img src="images/projects/dyson.jpg" alt="Dyson Internship">
+										<div class="team-overlay">
+											<h3><a href="#" class="social-icon" title="Dyson Internship">DYSON INTERNSHIP
+											</a></h3>
+										</div>
+									</div>
+									<div class="team-desc team-desc-bg">
+										<div class="team-title"><h4>Dyson Internship</h4></div>
+									</div>
+								</div>
+							</div>
 
-					<div class="topmargin center"><a href="#" class="button button-border button-circle t600">View More Projects</a></div>
+							<div class="col-md-6 bottommargin">
+								<div class="team">
+									<div class="team-image">
+										<img src="images/projects/design.jpg" alt="Industrial Design">
+										<div class="team-overlay">
+											<h3><a href="#" class="social-icon" title="Industrial Design">INDUSTRIAL DESIGN
+											</a></h3>
+										</div>
+									</div>
+									<div class="team-desc team-desc-bg">
+										<div class="team-title"><h4>Industrial Design</h4></div>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-md-6 bottommargin">
+								<div class="team">
+									<div class="team-image">
+										<img src="images/projects/robobrawl.png" alt="Robobrawl">
+										<div class="team-overlay">
+											<h3><a href="#" class="social-icon" title="Robobrawl">ROBOBRAWL
+											</a></h3>
+										</div>
+									</div>
+									<div class="team-desc team-desc-bg">
+										<div class="team-title"><h4>Robobrawl</h4></div>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-md-6 bottommargin">
+								<div class="team">
+									<div class="team-image">
+										<img src="images/projects/PSA.png" alt="PSA GAME-IT CHALLENGE">
+										<div class="team-overlay">
+											<h3><a href="#" class="social-icon" title="PSA GAME-IT CHALLENGE">PSA GAME-IT CHALLENGE
+											</a></h3>
+										</div>
+									</div>
+									<div class="team-desc team-desc-bg">
+										<div class="team-title"><h4>psa game-it challenge</h4></div>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-md-6 bottommargin">
+								<div class="team">
+									<div class="team-image">
+										<img src="images/projects/milkwatch.png" alt="Milkwatch">
+										<div class="team-overlay">
+											<h3><a href="#" class="social-icon" title="Milkwatch">MILKWATCH
+											</a></h3>
+										</div>
+									</div>
+									<div class="team-desc team-desc-bg">
+										<div class="team-title"><h4>Milkwatch</h4></div>
+									</div>
+								</div>
+							</div>
+
+						</div>
 
 				</div>
 
@@ -306,98 +382,7 @@
 						<p class="bottommargin" style="font-size: 16px;"><a href="#" data-scrollto="#section-hobbies" data-easing="easeInOutExpo" data-speed="1250" data-offset="70" class="more-link">Learn more <i class="icon-angle-right"></i></a></p>
 
 						<div class="clear"></div>
-
-						<div class="row topmargin-lg divcenter" style="max-width: 1000px;">
-
-							<div class="col-md-4 bottommargin">
-
-								<div class="team">
-									<div class="team-image">
-										<img src="images/team/1.jpg" alt="John Doe">
-										<div class="team-overlay">
-											<div class="team-social-icons">
-												<a href="#" class="social-icon si-borderless si-small si-facebook" title="Facebook">
-													<i class="icon-facebook"></i>
-													<i class="icon-facebook"></i>
-												</a>
-												<a href="#" class="social-icon si-borderless si-small si-twitter" title="Twitter">
-													<i class="icon-twitter"></i>
-													<i class="icon-twitter"></i>
-												</a>
-												<a href="#" class="social-icon si-borderless si-small si-github" title="Github">
-													<i class="icon-github"></i>
-													<i class="icon-github"></i>
-												</a>
-											</div>
-										</div>
-									</div>
-									<div class="team-desc team-desc-bg">
-										<div class="team-title"><h4>John Doe</h4><span>CEO</span></div>
-									</div>
-								</div>
-
-							</div>
-
-							<div class="col-md-4 bottommargin">
-
-								<div class="team">
-									<div class="team-image">
-										<img src="images/team/2.jpg" alt="Josh Clark">
-										<div class="team-overlay">
-											<div class="team-social-icons">
-												<a href="#" class="social-icon si-borderless si-small si-twitter" title="Twitter">
-													<i class="icon-twitter"></i>
-													<i class="icon-twitter"></i>
-												</a>
-												<a href="#" class="social-icon si-borderless si-small si-linkedin" title="LinkedIn">
-													<i class="icon-linkedin"></i>
-													<i class="icon-linkedin"></i>
-												</a>
-												<a href="#" class="social-icon si-borderless si-small si-flickr" title="Flickr">
-													<i class="icon-flickr"></i>
-													<i class="icon-flickr"></i>
-												</a>
-											</div>
-										</div>
-									</div>
-									<div class="team-desc team-desc-bg">
-										<div class="team-title"><h4>Mary Jane</h4><span>Co-Founder</span></div>
-									</div>
-								</div>
-
-							</div>
-
-							<div class="col-md-4 bottommargin">
-
-								<div class="team">
-									<div class="team-image">
-										<img src="images/team/3.jpg" alt="Mary Jane">
-										<div class="team-overlay">
-											<div class="team-social-icons">
-												<a href="#" class="social-icon si-borderless si-small si-twitter" title="Twitter">
-													<i class="icon-twitter"></i>
-													<i class="icon-twitter"></i>
-												</a>
-												<a href="#" class="social-icon si-borderless si-small si-vimeo" title="Vimeo">
-													<i class="icon-vimeo"></i>
-													<i class="icon-vimeo"></i>
-												</a>
-												<a href="#" class="social-icon si-borderless si-small si-instagram" title="Instagram">
-													<i class="icon-instagram"></i>
-													<i class="icon-instagram"></i>
-												</a>
-											</div>
-										</div>
-									</div>
-									<div class="team-desc team-desc-bg">
-										<div class="team-title"><h4>Josh Clark</h4><span>Sales</span></div>
-									</div>
-								</div>
-
-							</div>
-
-						</div>
-
+						
 					</div>
 
 				</div>
@@ -412,7 +397,7 @@
 
 			<div id="contacts">
 				<div class="container center clearfix">
-					<p id='contact-info'><a href="mailto:yaoxinmeng@gmail.com" target="_blank">EMAIL</a>  |  <a href="https://www.linkedin.com/in/yaoxinmeng" target="_blank">LINKEDIN</a>  |  <a href="https://www.instagram.com/xmxmyao/" target="_blank">INSTAGRAM</a></p>
+					<p id='contact-info'><a href="mailto:yaoxinmeng@gmail.com" target="_blank">EMAIL</a>   <em>&#183</em>   <a href="https://www.linkedin.com/in/yaoxinmeng" target="_blank">LINKEDIN</a>   <em>&#183</em>   <a href="https://www.instagram.com/xmxmyao/" target="_blank">INSTAGRAM</a></p>
 				</div>
 			</div>
 
