--- a/index.html
+++ b/index.html
@@ -250,11 +250,59 @@
 					<div class="section nomargin">
 						<div class="container clearfix">
 							<div class="divcenter center" style="max-width: 900px;">
-								<h2 class="nobottommargin t300 ls1">We enjoy working on the Services &amp; Products we provide as much as you need them. This help us in delivering your Goals easily. Browse through the wide range of services we provide.</h2>
+								<h2 class="nobottommargin t300 ls1">I believe in working hard and playing hard. These are some of the activities that I like to pursue in my free time.</h2>
 							</div>
 						</div>
 					</div>
 
+					<div class="section parallax 	 dark" style="padding: 20px 0;" data-bottom-top="background-position:0px 0px;" data-top-bottom="background-position:0px -300px;">
+
+						<div class="container clearfix">
+
+							<div class="fslider testimonial testimonial-full nobgcolor noborder noshadow nopadding" data-arrows="false">
+									<div class="flexslider">
+										<div class="slider-wrap">
+											<div class="slide">
+												<div class="testi-content">
+													<img src="images/hobbies/CO.jpg" alt="Chinese Orchestra">
+													<div class="testi-meta">
+														<span>I have played the Chinese flute since I was 9, and I have performed in an orchestra for almost 8 years. Even though I no longer actively play in an orchestra, I still find it relaxing to pick up my flute and play it from time to time.</span>
+													</div>
+												</div>
+											</div>
+											<div class="slide">
+												<div class="testi-content">
+													<img src="images/hobbies/CO.jpg" alt="Chinese Orchestra">
+													<div class="testi-meta">
+														<span>I have played the Chinese flute since I was 9, and I have performed in an orchestra for almost 8 years. Even though I no longer actively play in an orchestra, I still find it relaxing to pick up my flute and play it from time to time.</span>
+													</div>
+												</div>
+											</div>
+											<div class="slide">
+												<div class="testi-content">
+													<img src="images/hobbies/CO.jpg" alt="Chinese Orchestra">
+													<div class="testi-meta">
+														<span>I have played the Chinese flute since I was 9, and I have performed in an orchestra for almost 8 years. Even though I no longer actively play in an orchestra, I still find it relaxing to pick up my flute and play it from time to time.</span>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+
+						</div>
+
+					</div>
+
+					<div class="section nomargin">
+						<div class="divcenter center" style="max-width: 900px;">
+							<a href="#" class="button button-border button-light button-circle" data-scrollto="#section-about" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">more about me</a>
+						</div>
+					</div>
+
+				</div>
+
+				<div id="section-about" class="center page-section">
 					<div class="row align-items-stretch">
 
 						<div class="col-lg-4 d-none d-md-block" style="background: url('images/profile.jpg') center center no-repeat; background-size: cover;"></div>
@@ -314,64 +362,6 @@
 						</div>
 
 					</div>
-
-					<div class="section dark nomargin">
-						<div class="divcenter center" style="max-width: 900px;">
-							<h2 class="nobottommargin t300 ls1">Like Our Services? Get an <a href="#" data-scrollto="#template-contactform" data-offset="140" data-easing="easeInOutExpo" data-speed="1250" class="button button-border button-circle button-light button-large notopmargin nobottommargin" style="position: relative; top: -3px;">Instant Quote</a></h2>
-						</div>
-					</div>
-
-					<div class="section parallax nomargin dark" style="background-image: url('images/page/testimonials.jpg'); padding: 150px 0;" data-bottom-top="background-position:0px 0px;" data-top-bottom="background-position:0px -300px;">
-
-						<div class="container clearfix">
-
-							<div class="col_two_fifth nobottommargin">&nbsp;</div>
-
-							<div class="col_three_fifth nobottommargin col_last">
-
-								<div class="fslider testimonial testimonial-full nobgcolor noborder noshadow nopadding" data-arrows="false">
-									<div class="flexslider">
-										<div class="slider-wrap">
-											<div class="slide">
-												<div class="testi-content">
-													<p>Similique fugit repellendus expedita excepturi iure perferendis provident quia eaque vero numquam?</p>
-													<div class="testi-meta">
-														Steve Jobs
-														<span>Apple Inc.</span>
-													</div>
-												</div>
-											</div>
-											<div class="slide">
-												<div class="testi-content">
-													<p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-													<div class="testi-meta">
-														Collis Ta'eed
-														<span>Envato Inc.</span>
-													</div>
-												</div>
-											</div>
-											<div class="slide">
-												<div class="testi-content">
-													<p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum!</p>
-													<div class="testi-meta">
-														John Doe
-														<span>XYZ Inc.</span>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-
-							</div>
-
-						</div>
-
-					</div>
-
-				</div>
-
-				<div id="section-about" class="center page-section">
 
 					<div class="container clearfix">
 
