--- a/index.html
+++ b/index.html
@@ -245,12 +245,12 @@
 
 				</div>
 
-				<div id="section-hobbies" class="page-section notoppadding">
+				<div id="section-hobbies" class="notoppadding">
 
 					<div class="section nomargin">
 						<div class="container clearfix">
 							<div class="divcenter center" style="max-width: 900px;">
-								<h2 class="nobottommargin t300 ls1">I believe in working hard and playing hard. These are some of the activities that I like to pursue in my free time.</h2>
+								<h2 class="nobottommargin t300 ls1" style="color: white">I believe in working hard and playing hard. These are some of the activities that I like to pursue in my free time.</h2>
 							</div>
 						</div>
 					</div>
@@ -272,17 +272,17 @@
 											</div>
 											<div class="slide">
 												<div class="testi-content">
-													<img src="images/hobbies/CO.jpg" alt="Chinese Orchestra">
+													<img src="images/hobbies/DOTA2.jpg" alt="DOTA2">
 													<div class="testi-meta">
-														<span>I have played the Chinese flute since I was 9, and I have performed in an orchestra for almost 8 years. Even though I no longer actively play in an orchestra, I still find it relaxing to pick up my flute and play it from time to time.</span>
+														<span>I was introduced to the original version of this game when I was 13, and I have been mesmerised by its endless complexities ever since. DOTA2 has since become the symbol of e-sports, but more importantly for me, it was the spark that ignited my interest in programming.</span>
 													</div>
 												</div>
 											</div>
 											<div class="slide">
 												<div class="testi-content">
-													<img src="images/hobbies/CO.jpg" alt="Chinese Orchestra">
+													<img src="images/hobbies/chess.png" alt="Chinese Chess">
 													<div class="testi-meta">
-														<span>I have played the Chinese flute since I was 9, and I have performed in an orchestra for almost 8 years. Even though I no longer actively play in an orchestra, I still find it relaxing to pick up my flute and play it from time to time.</span>
+														<span>Influenced by my father and my grandfather, I picked up Chinese Chess from young. However, it was not until I was 17 that I started treating the game more seriously by joining the school chess club.</span>
 													</div>
 												</div>
 											</div>
