--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 												<div class="testi-content">
 													<img src="images/hobbies/chess.png" alt="Chinese Chess">
 													<div class="testi-meta">
-														<span>Influenced by my father and my grandfather, I picked up Chinese Chess from young. However, it was not until I was 17 that I started treating the game more seriously by joining the school chess club.</span>
+														<span>Influenced by my father and my grandfather, I picked up Chinese chess from young. However, it was not until I was 17 that I started treating the game more seriously by joining the school chess club. Even though I am still very much a novice at chess, I enjoy the focus that I get in the heat of the game.</span>
 													</div>
 												</div>
 											</div>
@@ -302,77 +302,22 @@
 
 				</div>
 
-				<div id="section-about" class="center page-section">
-					<div class="row align-items-stretch">
-
-						<div class="col-lg-4 d-none d-md-block" style="background: url('images/profile.jpg') center center no-repeat; background-size: cover;"></div>
-						<div class="col-lg-8">
-							<div>
-								<div class="row align-items-stretch grid-border clearfix">
-									<div class="col-lg-4 col-md-6 col-padding">
-										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-											<div class="fbox-icon">
-												<a href="#"><i class="icon-et-mobile"></i></a>
-											</div>
-											<h3>Responsive Framework</h3>
-										</div>
-									</div>
-									<div class="col-lg-4 col-md-6 col-padding">
-										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-											<div class="fbox-icon">
-												<a href="#"><i class="icon-et-presentation"></i></a>
-											</div>
-											<h3>Beautifully Presented</h3>
-										</div>
-									</div>
-									<div class="col-lg-4 col-md-6 col-padding">
-										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-											<div class="fbox-icon">
-												<a href="#"><i class="icon-et-puzzle"></i></a>
-											</div>
-											<h3>Extensively Extendable</h3>
-										</div>
-									</div>
-									<div class="col-lg-4 col-md-6 col-padding">
-										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-											<div class="fbox-icon">
-												<a href="#"><i class="icon-et-gears"></i></a>
-											</div>
-											<h3>Powerfully Customizable</h3>
-										</div>
-									</div>
-									<div class="col-lg-4 col-md-6 col-padding">
-										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-											<div class="fbox-icon">
-												<a href="#"><i class="icon-et-genius"></i></a>
-											</div>
-											<h3>Geniusly Transformable</h3>
-										</div>
-									</div>
-									<div class="col-lg-4 col-md-6 col-padding">
-										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-											<div class="fbox-icon">
-												<a href="#"><i class="icon-et-hotairballoon"></i></a>
-											</div>
-											<h3>Industrial Support</h3>
-										</div>
-									</div>
-								</div>
-							</div>
+				<div id="section-about" class="page-section notoppadding">
+					<div class="section nomargin">
+						<div class="container clearfix">
+							<h2 class="center divcenter nobottommargin t300 ls1">A digital web studio creating stunning &amp; engaging online experiences</h2>
 						</div>
-
 					</div>
 
-					<div class="container clearfix">
+					<div class="row notopmargin divcenter" style="max-width: 1000px;">
 
-						<h2 class="divcenter bottommargin font-body" style="max-width: 700px; font-size: 40px;">A digital web studio creating stunning &amp; engaging online experiences</h2>
+						<div class="col-md-6 bottommargin">
+							<img src="images/profile.jpg" alt="Profile">
+						</div>
 
-						<p class="lead divcenter bottommargin" style="max-width: 800px;">Ford Foundation reduce child mortality fight against oppression refugee disruption pursue these aspirations effect. Free-speech Nelson Mandela change liberal; challenges of our times sustainability institutions.</p>
-
-						<p class="bottommargin" style="font-size: 16px;"><a href="#" data-scrollto="#section-hobbies" data-easing="easeInOutExpo" data-speed="1250" data-offset="70" class="more-link">Learn more <i class="icon-angle-right"></i></a></p>
-
-						<div class="clear"></div>
-						
+						<div class="col-md-6 bottommargin">
+							<p class="lead bottommargin" style="max-width: 800px;"><strong>Hi, I’m Xin Meng. I enjoy designing and making stuff.</strong> <br><br>I am currently enrolled in the Renaissance Engineering Program at Nanyang Technological University. I also am receiving a certificate in design from the Segal Design Institute at Northwestern University. As a mechanical engineer, I found my passion in mechatronics and I embrace the technical challenges involved. <br><br>In my free time, I play video games, Chinese flute, Chinese chess, badminton and table tennis.</p>
+						</div>
 					</div>
 
 				</div>
