--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 									<div class="team-image">
 										<img src="images/projects/mechatronics.jpg" alt="Mechatronics">
 										<div class="team-overlay">
-											<h3><a href="mechatronics.html" class="social-icon" title="Mechatronics">MECHATRONICS
+											<h3><a href="mechatronics.html" class="social-icon" title="Mechatronics">A series of projects that were done as part of the Northwestern University Mechatronics courses.
 											</a></h3>
 										</div>
 									</div>
@@ -141,7 +141,7 @@
 									<div class="team-image">
 										<img src="images/projects/nickel.jpg" alt="Nickel Feeder">
 										<div class="team-overlay">
-											<h3><a href="#" class="social-icon" title="Nickel Feeder">NICKEL FEEDER
+											<h3><a href="#" class="social-icon" title="Nickel Feeder">A project in collaboration with the Shedd Aquarium to design a feeder for Nickel, the resident green sea turtle.
 											</a></h3>
 										</div>
 									</div>
@@ -156,7 +156,7 @@
 									<div class="team-image">
 										<img src="images/projects/dtd.jpg" alt="Design Thinking and Doing">
 										<div class="team-overlay">
-											<h3><a href="#" class="social-icon" title="Design Thinking and Doing">DESIGN THINKING AND DOING
+											<h3><a href="#" class="social-icon" title="Design Thinking and Doing">I attempted to design and build a stool from scratch. This was also my first attempt at woodworking.
 											</a></h3>
 										</div>
 									</div>
@@ -171,7 +171,7 @@
 									<div class="team-image">
 										<img src="images/projects/dyson.jpg" alt="Dyson Internship">
 										<div class="team-overlay">
-											<h3><a href="#" class="social-icon" title="Dyson Internship">DYSON INTERNSHIP
+											<h3><a href="#" class="social-icon" title="Dyson Internship">A 10-week internship program with Dyson UK that proved to be a great learning experience.
 											</a></h3>
 										</div>
 									</div>
@@ -186,7 +186,7 @@
 									<div class="team-image">
 										<img src="images/projects/design.jpg" alt="Industrial Design">
 										<div class="team-overlay">
-											<h3><a href="#" class="social-icon" title="Industrial Design">INDUSTRIAL DESIGN
+											<h3><a href="#" class="social-icon" title="Industrial Design">A product design class offered by the Segal Design Insititute that introduced me to the realm of product design.
 											</a></h3>
 										</div>
 									</div>
@@ -199,9 +199,9 @@
 							<div class="col-md-6 bottommargin">
 								<div class="team">
 									<div class="team-image">
-										<img src="images/projects/robobrawl.png" alt="Robobrawl">
+										<img src="images/projects/robobrawl.jpg" alt="Robobrawl">
 										<div class="team-overlay">
-											<h3><a href="#" class="social-icon" title="Robobrawl">ROBOBRAWL
+											<h3><a href="#" class="social-icon" title="Robobrawl">My first robotics competition was an invaluable learning experience in designing and fabricating things within practical constraints.
 											</a></h3>
 										</div>
 									</div>
@@ -214,9 +214,9 @@
 							<div class="col-md-6 bottommargin">
 								<div class="team">
 									<div class="team-image">
-										<img src="images/projects/PSA.png" alt="PSA GAME-IT CHALLENGE">
+										<img src="images/projects/PSA.jpg" alt="PSA GAME-IT CHALLENGE">
 										<div class="team-overlay">
-											<h3><a href="#" class="social-icon" title="PSA GAME-IT CHALLENGE">PSA GAME-IT CHALLENGE
+											<h3><a href="#" class="social-icon" title="PSA GAME-IT CHALLENGE">An exciting game-making competition that provided me with invaluable experience in programming. 
 											</a></h3>
 										</div>
 									</div>
@@ -229,9 +229,9 @@
 							<div class="col-md-6 bottommargin">
 								<div class="team">
 									<div class="team-image">
-										<img src="images/projects/milkwatch.png" alt="Milkwatch">
+										<img src="images/projects/milkwatch.jpg" alt="Milkwatch">
 										<div class="team-overlay">
-											<h3><a href="#" class="social-icon" title="Milkwatch">MILKWATCH
+											<h3><a href="#" class="social-icon" title="Milkwatch">A product that keeps you informed about the freshness of milk and predicts when your milk is about to spoil.
 											</a></h3>
 										</div>
 									</div>
