--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 				<div id="section-about" class="page-section notoppadding">
 					<div class="section nomargin">
 						<div class="container clearfix">
-							<h2 class="center divcenter nobottommargin t300 ls1">A digital web studio creating stunning &amp; engaging online experiences</h2>
+							<h2 class="center divcenter nobottommargin t300 ls1">About Me</h2>
 						</div>
 					</div>
 
