--- a/mechatronics.html
+++ b/mechatronics.html
@@ -75,13 +75,41 @@
 
 		</header><!-- #header end -->
 		
+		<!-- Content
+		============================================= -->
+		<section id="content">
+
+			<div class="content-wrap nopadding">
+				<div id="projects" class="page-section notoppadding">
+					<div class="section nomargin">
+						<div class="container clearfix">
+							<h2 class="center divcenter nobottommargin t300 ls1">About Me</h2>
+						</div>
+					</div>
+
+					<div class="row notopmargin divcenter" style="max-width: 1000px;">
+
+						<div class="col-md-6 bottommargin">
+							<img src="images/profile.jpg" alt="Profile">
+						</div>
+
+						<div class="col-md-6 bottommargin">
+							<p class="lead bottommargin" style="max-width: 800px;"><strong>Hi, I’m Xin Meng. I enjoy designing and making stuff.</strong> <br><br>I am currently enrolled in the Renaissance Engineering Program at Nanyang Technological University. I also am receiving a certificate in design from the Segal Design Institute at Northwestern University. As a mechanical engineer, I found my passion in mechatronics and I embrace the technical challenges involved. <br><br>In my free time, I play video games, Chinese flute, Chinese chess, badminton and table tennis.</p>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
+		</section><!-- #content end -->
+
 		<!-- Footer
 		============================================= -->
 		<footer id="footer" class="dark noborder">
 
 			<div id="contacts">
 				<div class="container center clearfix">
-					<p id='contact-info'><a href="mailto:yaoxinmeng@gmail.com" target="_blank">EMAIL</a>  |  <a href="https://www.linkedin.com/in/yaoxinmeng" target="_blank">LINKEDIN</a>  |  <a href="https://www.instagram.com/xmxmyao/" target="_blank">INSTAGRAM</a></p>
+					<p id='contact-info'><a href="mailto:yaoxinmeng@gmail.com" target="_blank">EMAIL</a>   <em>&#183</em>   <a href="https://www.linkedin.com/in/yaoxinmeng" target="_blank">LINKEDIN</a>   <em>&#183</em>   <a href="https://www.instagram.com/xmxmyao/" target="_blank">INSTAGRAM</a></p>
 				</div>
 			</div>
 
