--- a/portfolio-single-gallery-full.html
+++ b/portfolio-single-gallery-full.html
@@ -9,7 +9,7 @@
 	============================================= -->
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700|Crete+Round:400i" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-	<link rel="stylesheet" href="css/style.css" type="text/css" />
+	<link rel="stylesheet" href="style.css" type="text/css" />
 	<link rel="stylesheet" href="css/dark.css" type="text/css" />
 	<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 	<link rel="stylesheet" href="css/animate.css" type="text/css" />
@@ -20,7 +20,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Portfolio Single - Image Full Width | Canvas</title>
+	<title>Portfolio Single - Gallery Full Width | Canvas</title>
 
 </head>
 
@@ -692,7 +692,7 @@
 		<section id="page-title">
 
 			<div class="container clearfix">
-				<h1>Portfolio Single - Image</h1>
+				<h1>Portfolio Single - Gallery</h1>
 				<div id="portfolio-navigation">
 					<a href="#"><i class="icon-angle-left"></i></a>
 					<a href="#"><i class="icon-line-grid"></i></a>
@@ -710,10 +710,18 @@
 
 				<div class="container clearfix">
 
-					<!-- Portfolio Single Image
+					<!-- Portfolio Single Gallery
 					============================================= -->
 					<div class="col_full portfolio-single-image">
-						<a href="#"><img src="images/portfolio/single/full/10.jpg" alt=""></a>
+						<div class="fslider" data-arrows="true" data-animation="slide">
+							<div class="flexslider">
+								<div class="slider-wrap">
+									<div class="slide"><a href="#"><img src="images/portfolio/single/full/1.jpg" alt=""></a></div>
+									<div class="slide"><a href="#"><img src="images/portfolio/single/full/7.jpg" alt=""></a></div>
+									<div class="slide"><a href="#"><img src="images/portfolio/single/full/10.jpg" alt=""></a></div>
+								</div>
+							</div>
+						</div>
 					</div><!-- .portfolio-single-image end -->
 
 					<div class="col_one_third nobottommargin">
@@ -797,7 +805,7 @@
 					============================================= -->
 					<h4>Related Projects:</h4>
 
-					<div id="related-portfolio" class="owl-carousel portfolio-carousel carousel-widget" data-margin="30" data-nav="false" data-autoplay="5000" data-items-xs="1" data-items-sm="2" data-items-md="3" data-items-lg="4" data-items-xl="4">
+					<div id="related-portfolio" class="owl-carousel portfolio-carousel carousel-widget" data-margin="30" data-nav="false" data-autoplay="5000" data-items-xs="1" data-items-sm="2" data-items-md="3" data-items-xl="4">
 
 						<div class="oc-item">
 							<div class="iportfolio">
