--- a/mechatronics.html
+++ b/mechatronics.html
@@ -100,7 +100,7 @@
 								<div class="slider-wrap">
 									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
 									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
-									<div class="slide"><video controls><source src="images/projects/ME333_final.mp4" type="video/mp4"></video></div>
+									<div class="slide"><iframe width="560" height="315" src="https://www.youtube.com/embed/odl52fTSrSQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>></div>
 								</div>
 							</div>
 						</div>
